Clean up, format and simplify code and project-config of m2e.apt
Also make Activators obsolete and make the test plug-in a fragment of
m2e.apt.core to avoid package-exports.